--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<html>Check your work in the console!</html>
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Sprint Challenge</title>
+
+  <script src="diffingObject.js"></script>
+</head>
+
+<body>
+  <h1>Check your work in the console!</h1>
+</body>
+</html>
