Added attempt at detect-X0 function, and edited index.html file to call all JS functions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>Sprint Challenge</title>
 
   <script src="diffingObject.js"></script>
+  <script src="reverseString.js"></script>
+  <script src="diffingObject.js"></script>
 </head>
 
 <body>
