--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <script src="diffingObject.js"></script>
   <script src="reverseString.js"></script>
-  <script src="diffingObject.js"></script>
+  <script src="detect-XO.js"></script>
 </head>
 
 <body>
