Committing this work, so that I can access it from my other computer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="diffingObject.js"></script>
   <script src="reverseString.js"></script>
   <script src="detect-XO.js"></script>
+  <script src="removeDuplicates.js"></script>
 </head>
 
 <body>
